# matrix_multiplication

./: CMakeLists.txt  job.sh  main.cu  mm.cu  mm.cuh
benchmark/: CMakeLists.txt  bench_xxx.cpp
tests/: CMakeLists.txt  testa.cpp
